--- a/stylesheet/hamburger.css
+++ b/stylesheet/hamburger.css
@@ -26,17 +26,51 @@
 	  cursor: pointer;
 	  z-index: 9999;
 	}
+
 	.menu__btn > span,
 	.menu__btn > span::before,
 	.menu__btn > span::after {
-	  display: block;
-	  position: absolute;
-	  width: 100%;
-	  height: 7px;
-	  background-color: #666666;
-	  transition-duration: .25s;
-    border-radius: 7px;
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 7px;
+		background-color: #666666;
+		transition-duration: .25s;
+		border-radius: 7px;
 	}
+
+	.menu__btn > span:hover,
+	.menu__btn > span:hover::before,
+	.menu__btn > span:hover::after {
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 7px;
+		transition-duration: .25s;
+		border-radius: 7px;
+		animation-name: hamburgercoloranimation;
+		animation-duration: 5s;
+		animation-delay: 0s;
+		animation-iteration-count: infinite;
+	}
+	@keyframes hamburgercoloranimation {
+		0% {
+			background-color: #666666;
+		}
+		20% {
+			background-color: #D4145A;
+		}
+		45% {
+			background-color: #2676D5;
+		}
+		80% {
+			background-color: #009245;
+		}
+		100% {
+			background-color: #666666;
+		}
+	}
+
 	.menu__btn > span::before {
 	  content: '';
 	  top: -15px;
