--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -378,6 +378,10 @@ img.portfolio_images.mickey100uniqlo {
 
 	}
 
+  .portfolio-top-headline-td-width{
+		width: 500px;
+	}
+
   .threecoloumntables {
 		width:650px;
 		margin-left: auto;
@@ -470,10 +474,10 @@ label.menu__btn {
 	animation-fill-mode: both;
 	}
 @keyframes hamburgerfademonitor {
-	0% {opacity: 1;}
-	2% {opacity: 1;}
-	3% {opacity: .3;}
-	100% {opacity: .3;}
+	0% {opacity: 1; transform: translateX(-5px);}
+	1.5% {opacity: 1; transform: translateX(-5px);}
+	2.5% {opacity: 0.4; transform: translateX(-75px);}
+	100% {opacity: 0.4; transform: translateX(-75px);}
 }
 
 	.portfolio_images-mobile {
@@ -1493,7 +1497,7 @@ label.menu__btn {
 		100% {opacity: 1; -webkit-float: left;}
 	}
 
-	img.portfolio_images_pop.blgbeyondtwo {
+	img.portfolio_images_pop.blgbeyondtwo, video.portfolio_images_pop.blgbeyondtwo  {
 		display: inline-block;
 		position: relative;
 		width: 98vw;
@@ -1715,6 +1719,9 @@ label.menu__btn {
 		100% {opacity: 0; float: left;}
 	}
 
+	.portfolio-top-headline-td-width{
+		width: 200px;
+	}
 
 	.threebythreegrid.hamburger{
 		width:50vw;
@@ -1733,14 +1740,16 @@ label.menu__btn {
 		0% {
 				opacity: 1;
 			}
-		10% {
+		4% {
 				opacity: 1;
 			}
-		15% {
-			opacity: 0.3;
+		5% {
+			opacity: 0.2;
+			transform: scale(0.8) translateX(-15px) translateY(-50px);
 		}
 		100% {
-			opacity: 0.3;
+			opacity: 0.2;
+			transform: scale(0.8) translate(-15px) translateY(-50px);
 		}
 	}
 
