--- a/stylesheet/threegridpopup.css
+++ b/stylesheet/threegridpopup.css
@@ -14,6 +14,7 @@
     transform: scale(1.4);
     cursor: zoom-out;
     margin-top: 14%;
+    z-index: 10;
   }
 
   .titleforpopup {
@@ -1047,6 +1048,17 @@
     font-family: lato;
     font-size: 10.5pt;
     line-height: 1.3em;
+  }
+
+  .skillsbubble {
+    display: inline-block;
+    margin: 10px 12px 0px 0px;
+    padding: 2px 6px;
+    font-family: lato;
+    font-size: 9pt;
+    text-align: center;
+    border: 1px solid white;
+    border-radius: 25px;
   }
 
   .popup9 .show9, .popup3 .show3, .popup2 .show2, .popup1 .show1, .popup15 .show15, .popup4 .show4, .popup5 .show5 {
