--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -1164,16 +1164,27 @@ p.resume-prompt {
     object-position: 55%;
   }
 
-.container_two{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-	align-items: center;
-    vertical-align: middle;
-	   width: 90vw;
-    height: auto;
-  }
+  .container_one.contactpage{
+      overflow: hidden;
+      display: block;
+    height: 10vh;
+  	background: red;
+    background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
+  	}
+
+    .container_two{
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    	align-items: center;
+        vertical-align: middle;
+    	width: 100vw;
+        height: auto;
+    }
 
 .container_three{
     position: relative;
@@ -1302,9 +1313,8 @@ div.img_relative.labtop{
   h4  > a:visited,
   h4  > a:link,
   h4  > a:active{
-    padding: 3vw;
     opacity: 1;
-    font-size: 12pt;
+    font-size: 5vw;
     text-transform: lowercase;
   }
 
@@ -1436,17 +1446,6 @@ h4.email a{
 	/*transition: all .1s ease-in-out;*/
   }
 
-
-.container_one.contactpage{
-    overflow: hidden;
-    display: block;
-  height: 10vh;
-	background: red;
-  background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
-	}
 
   .container_two.contact{
     width: 100%;
