--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -371,7 +371,7 @@ img.portfolio_images.mickey100uniqlo {
   letter-spacing: .1em;
   line-height: 1.5;
   opacity: 1;
-  padding-left: 5%;
+
   margin-top: 5px;
   margin-bottom:5px;
   text-align: left;
@@ -384,7 +384,7 @@ img.portfolio_images.mickey100uniqlo {
 	/** About Me Three Column **/
 		.threecoloumntables.wideaboutme	{
 			width:1050px;
-			height: 250px;
+			height: 200px;
 			margin-left: auto;
 			margin-right: auto;
 		}
@@ -819,7 +819,7 @@ label.menu__btn {
 
   .container_contacts{
     zoom: 85%;
-	 margin-top: 1.5%;
+	 margin-top: 20px;
 	 width: 700px;
 	 height: 10vh;
 	 margin-left: auto;
