--- a/stylesheet/marbWhite.css
+++ b/stylesheet/marbWhite.css
@@ -178,9 +178,8 @@ h1:hover{
 }
 
 h1.edwinname{
-  margin-top: -15%;
-	margin-bottom: 8%;
-	margin-left: 5%;
+  margin-top: -200px;
+	margin-bottom: 100px;
 }
 
 hr {
