--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -367,7 +367,7 @@ img.portfolio_images.mickey100uniqlo {
 		margin-left: 1px;
   color: gray;
   font-family: 'Lato', serif;
-  font-size: 11pt;
+  font-size: 12.5pt;
   letter-spacing: .1em;
   line-height: 1.5;
   opacity: 1;
@@ -377,13 +377,13 @@ img.portfolio_images.mickey100uniqlo {
 	}
 
   .portfolio-top-headline-td-width{
-		width: 500px;
+	/**	width: 500px;**/
 	}
 
 	/** About Me Three Column **/
 		.threecoloumntables.wideaboutme	{
-			width:1050px;
-			height: 200px;
+			width:1450px;
+			height: 300px;
 			margin-left: auto;
 			margin-right: auto;
 		}
@@ -401,7 +401,7 @@ img.portfolio_images.mickey100uniqlo {
 			text-align: center;
 			vertical-align: bottom;
 			font-weight: bold;
-			padding: 0px 30px 30px;
+			padding: 0px 30px 6contacter_two0px;
 
 		}
 
@@ -413,14 +413,20 @@ img.portfolio_images.mickey100uniqlo {
 
 	/** Portfolio Three Column **/
 
+	.threecoloumntableshamburger {
+		width:90vw;
+		margin-left: auto;
+		margin-right: auto;
+		}
+
   .threecoloumntables {
-		width:650px;
+		width:950px;
 		margin-left: auto;
 		margin-right: auto;
 		}
 
 	.twocoloumntables {
-			width:650px;
+			width:950px;
 			margin-left: auto;
 			margin-right: auto;
 			height: 325px;
@@ -428,7 +434,7 @@ img.portfolio_images.mickey100uniqlo {
 
 	.threebythreegridhamburger {
 						overflow:hidden;
-						width: 75px;
+						width: 125px;
 	/**	width: calc(100% / 3);  **/
 		}
 
@@ -449,7 +455,7 @@ img.portfolio_images.mickey100uniqlo {
 	@keyframes smallertiles {
 		0% {
 			opacity: 0;
-			transform: scale(1,0.5) translateY(150px);
+			transform: scale(1,1) translateY(50px);
 		}
 		100% {
 			opacity: 1;
@@ -501,7 +507,7 @@ img.portfolio_images.mickey100uniqlo {
 
 label.menu__btn {
 	position: fixed;
-	top: 5.5vh;
+	top: 50px;
 	left: inherit;
 	animation: hamburgerfademonitor 2s ease-in-out infinite;
 	animation-play-state: paused;
@@ -510,10 +516,10 @@ label.menu__btn {
 	animation-fill-mode: both;
 	}
 @keyframes hamburgerfademonitor {
-	0% {opacity: 1; transform: translateX(-10px);}
-	1.5% {opacity: 1; transform: translateX(-10px);}
-	3.5% {opacity: 0.4; transform: translateX(-200px);}
-	100% {opacity: 0.4; transform: translateX(-200px);}
+	0% {opacity: 1; }
+	1.5% {opacity: 1; }
+	3.5% {opacity: 0.3; }
+	100% {opacity: 0.3; }
 }
 
 	.portfolio_images-mobile {
@@ -549,32 +555,7 @@ label.menu__btn {
 	height: 84vh;
 }
 
-.container_one.intro{
-	width: 100vw;
-	height: 100vh;
-	}
 
-.headermred {
-	display: block;
-	width: 100%;
-	outline: 1px solid #dcdcdc; outline-offset: 4px;
-}
-
-
-.headermred:after {
-	content: "";
-	position: absolute;
-	border: 2px solid red;
-	top: 6px;
-	left: 6px;
-	bottom: 6px;
-	right: 6px;
-	border-radius: 100%;
-}
-
-
-.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img
-{width: 60%; max-width: 60%;}
 
 .alm{
 	position: relative;
@@ -930,7 +911,7 @@ label.menu__btn {
   }
 
   h1 {
-    font-size: 9vw;
+    font-size: 7vw;
   }
 
   h2.button-row {
@@ -1049,7 +1030,7 @@ label.menu__btn {
 	.container_one.contactpage{
     overflow: hidden;
     display: flex;
-		height: 25vh;
+		height: 50vh;
 		width: 100%;  background: red;
 		background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
 		background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
@@ -1375,6 +1356,7 @@ label.menu__btn {
 	padding-top: 5px;
   margin-top: 5px;
   margin-bottom:5px;
+
   text-align: left;
 	}
 
@@ -1756,7 +1738,7 @@ label.menu__btn {
 	}
 
 	.portfolio-top-headline-td-width{
-		width: 200px;
+	/**	width: 200px;**/
 	}
 
 	.threebythreegrid.hamburger{
@@ -1922,26 +1904,6 @@ label.menu__btn {
 	padding: 5px 10px;
 }
 
-.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img
-{width: 80%; max-width: 80%;}
-
-.container_carousel{
-  overflow: hidden;
-	height: auto;
-}
-
-.container_one.intro{
-	width: 100vw;
-    height: 65vh;
-	position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-	align-items: center;
-    vertical-align: middle;
-    overflow: hidden;
-	background: 50vh;
-}
 
 
 .container_two{
@@ -1994,39 +1956,6 @@ label.menu__btn {
     line-height: 1.15;
   }
 
-	h1.edwinname {
-    font-size: 12vw;
-    line-height: 1.15;
-	margin-top: -20px;
-	margin-bottom: 30px;
-  }
-
-  h2.left.button-row{
-	font-size: 4vw;
-    margin-left: -5vw;
-	}
-
-  h2.right_right.button-row{
-	font-size: 4vw;
-    margin-left: 0%;
-  }
-
-h2.button-row{
-    -webkit-perspective: 1000px;
-    -moz-perspective: 1000px;
-    perspective: 1000px;
-    font-family: 'Oswald', sans-serif;
-    letter-spacing: .15em;
-    font-size: 4vw;
-    font-weight: bold;
-    display: block;
-	width: 35vw;
-	margin-left: -5vw;
-	}
-
-h2.button-row > a::before, h2.button-row > a::after{
-		width: 40vw;
-		}
 
 div.img_relative.labtop{
     height: 100vh;
@@ -2051,17 +1980,6 @@ div.img_relative.labtop{
 
   .resume_pdf{
     width: 99%;
-  }
-
-  h4  a,
-  h4  > a:visited,
-  h4  > a:link,
-  h4  > a:active{
-    /*padding: 10px 20px 20px 20px;*/
-		padding: 1px 15px 0px 15px;
-    opacity: 1;
-    font-size: 4vw;
-    text-transform: lowercase;
   }
 
 
