--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -399,7 +399,7 @@ img.portfolio_images.mickey100uniqlo {
 			margin-top: 5px;
 			margin-bottom:5px;
 			text-align: center;
-			vertical-align: bottom;
+			vertical-align: middle;
 			font-weight: bold;
 			padding: 0px 30px 6contacter_two0px;
 
@@ -916,13 +916,13 @@ label.menu__btn {
 
   h2.button-row {
     letter-spacing: .15em;
-    font-size: 1.25vw;
+    font-size: 1.8vw;
     display: block;
   }
 
   h2.button-row > a::before, h2.button-row > a::after {
-    width: 11vw;
-    height: 35px;
+    width: 200px;
+    height: 50px;
   }
 
   div.img_relative.labtop{
@@ -1797,7 +1797,7 @@ label.menu__btn {
 			margin-top: 5px;
 			margin-bottom:5px;
 			text-align: center;
-			vertical-align: bottom;
+			vertical-align: middle;
 			font-weight: bold;
 			padding: 0px 50px 20px;
 		}
