--- a/stylesheet/contact_portfolio-coding.css
+++ b/stylesheet/contact_portfolio-coding.css
@@ -13,8 +13,10 @@
 .container_contacts{
   position: relative;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: center;
+/*  flex-direction: row;
+  justify-content: space-around; */
   vertical-align: bottom;
   width: 100%;
   height: 100px;
