--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -669,10 +669,11 @@ label.menu__btn {
   .img_introcloud1{
     margin-top: 3%;
     margin-left: -6%;
+		display: none;
   }
 
   .img_introcloud2{
-    top: 0%;
+    top: 1%;
   }
 
   h1 {
@@ -800,8 +801,8 @@ label.menu__btn {
   .container_contacts{
     zoom: 85%;
 	 margin-top: 20px;
-	 width: 700px;
-	 height: 10vh;
+	 width: 15vw;
+	 height: 30vh;
 	 margin-left: auto;
 	 margin-right: auto;
   }
@@ -814,6 +815,7 @@ label.menu__btn {
 
   h4.linkedin{
     margin-right: -5%;
+		padding: 25px 0px;
   }
 
   h4.facebook{
@@ -986,7 +988,7 @@ label.menu__btn {
     font-weight: bold;
     font-size: 2.5vw;
 	  font-color: #000;
-	display: none;
+	display: inherit;
 	bottom: 7%;
     right: 5%;
   }
@@ -1031,13 +1033,43 @@ label.menu__btn {
     overflow: hidden;
     display: flex;
 		height: 50vh;
-		width: 100%;  background: red;
+		width: 100%;
+		background: red;
 		background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
 		background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
 		background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
 		background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
 		  animation: contactsky 20s infinite;}
   }
+
+	.container_one.contactpage{
+		position: relative;
+			display: flex;
+			flex-direction: colum;
+			justify-content: space-between;
+			align-items: center;
+			vertical-align: middle;
+			width: 20vw;
+			overflow: hidden;
+			background: 50vh;
+			margin-top: auto;
+			margin-left: auto;
+			margin-right: auto;
+			border-radius: 50px 50px 0 0;
+			border-top: 5px solid #222222;
+			border-left: 5px solid #333333;
+			border-right: 5px solid #111111;
+			border-bottom: 0px;
+			height: 30vh;
+			background: red;
+		background: -webkit-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(white, #33273d, #003c5f, #C04E01); /* Standard syntax */
+		object-fit: cover;
+		object-position: 55%;
+	}
+
 
 .hamburger-menu{
 	display: block;
@@ -1246,6 +1278,35 @@ label.menu__btn {
 		animation: contactsky 20s infinite;
   }
 
+	div.container_one.contactpage{
+		position: relative;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			align-items: center;
+			vertical-align: middle;
+			width: 80vw;
+			overflow: hidden;
+			background: 50vh;
+			margin-top: auto;
+			margin-left: auto;
+			margin-right: auto;
+			border-radius: 50px 50px 0 0;
+			border-top: 5px solid #222222;
+			border-left: 5px solid #333333;
+			border-right: 5px solid #111111;
+			border-bottom: 0px;
+			height: 15vh;
+			background: red;
+		background: -webkit-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(white, #33273d, #003c5f, #C04E01); /* Standard syntax */
+		object-fit: cover;
+		object-position: 55%;
+	}
+
+
   .container-fluid.ninetywidth{
     /*transform: rotate(-90deg);*/
     max-width: 1080px;
@@ -1274,10 +1335,11 @@ label.menu__btn {
 
   .container_contacts{
 		display: flex;
+		flex-direction: column;
 		zoom: 85%;
 	 margin-top: 1%;
 	 width: 30%;
-	 height: 10vh;
+	 height: 30vh;
 	 margin-left: auto;
 	 margin-right: auto;
   }
@@ -1308,7 +1370,7 @@ label.menu__btn {
 	font-size: 7vw;
 	bottom: 2%;
 	z-index: 9999;
-	display: none;
+	display: inherit;
 	}
 }
 
@@ -1986,11 +2048,11 @@ div.img_relative.labtop{
 	.container_contacts{
 	position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
 	align-items: center;
     vertical-align: middle;
-    height: 10vh;
+    height: 30vh;
     width: 100%;
 }
 
@@ -2111,7 +2173,7 @@ h4.email a{
    font-size: 5vw;
 	  bottom: 1%;
 	  z-index: 8888;
-	  display: none;
+	  display: inherit;
 	}
 
 	div.container_one.contactpage{
