--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -374,6 +374,8 @@ img.portfolio_images.mickey100uniqlo {
   margin-top: 5px;
   margin-bottom:5px;
   text-align: left;
+	padding-left: 120px;
+	padding-right: 120px;
 	}
 
   .portfolio-top-headline-td-width{
@@ -517,7 +519,7 @@ label.menu__btn {
 @keyframes hamburgerfademonitor {
 	0% {opacity: 1; }
 	1.5% {opacity: 1; }
-	3.5% {opacity: 0.3; }
+	3.5% {opacity: 0.6; }
 	100% {opacity: 0.3; }
 }
 
@@ -800,7 +802,7 @@ label.menu__btn {
   .container_contacts{
     zoom: 85%;
 	 margin-top: 20px;
-	 width: 15vw;
+	 width: 275px;
 	 height: 30vh;
 	 margin-left: auto;
 	 margin-right: auto;
@@ -1046,7 +1048,7 @@ label.menu__btn {
 			justify-content: space-between;
 			align-items: center;
 			vertical-align: middle;
-			width: 20vw;
+			width: 350px;
 			overflow: hidden;
 			background: 50vh;
 			margin-top: auto;
@@ -1057,12 +1059,12 @@ label.menu__btn {
 			border-left: 5px solid #333333;
 			border-right: 5px solid #111111;
 			border-bottom: 0px;
-			height: 30vh;
+			height: 40vh;
 			background: red;
-		background: -webkit-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
-		background: -o-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
-		background: -moz-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
-		background: linear-gradient(white, #33273d, #003c5f, #C04E01); /* Standard syntax */
+		background: -webkit-linear-gradient(0.49turn, white, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(0.49turn, white, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(0.49turn, white, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(0.49turn, white, #33273d, #003c5f, #C04E01); /* Standard syntax */
 		object-fit: cover;
 		object-position: 55%;
 	}
@@ -1415,7 +1417,6 @@ label.menu__btn {
 	padding-top: 5px;
   margin-top: 5px;
   margin-bottom:5px;
-
   text-align: left;
 	}
 
