--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -402,7 +402,7 @@ img.portfolio_images.mickey100uniqlo {
 			text-align: center;
 			vertical-align: middle;
 			font-weight: bold;
-			padding: 0px 30px 6contacter_two0px;
+			padding: 0px 30px 20px;
 
 		}
 
