--- a/stylesheet/monitor_portfolio.css
+++ b/stylesheet/monitor_portfolio.css
@@ -196,6 +196,30 @@
     height: 50vh;
   }
 }
+
+
+.largemonitormimicnav{
+  background-color: none;
+  top: -140%;
+  opacity: .8;
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+}
+
+#datetime {
+  font-size: 13pt;
+  opacity: 1;
+  padding: 5px 20px 5px 5px;
+  font-family: 'lato', sans-serif;
+  color: #ffffff;
+}
+
+.navbarfontawesomefloatright{
+  float: right;
+}
+
+
 /*ipad labtops*/
 
 @media (max-width:2024px){
