--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -1034,10 +1034,10 @@ label.menu__btn {
 		height: 50vh;
 		width: 100%;
 		background: red;
-		background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
-		background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
-		background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
-		background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
+		background: -webkit-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* Standard syntax */
 		  animation: contactsky 20s infinite;}
   }
 
@@ -1055,16 +1055,16 @@ label.menu__btn {
 			margin-left: auto;
 			margin-right: auto;
 			border-radius: 50px 50px 0 0;
-			border-top: 5px solid #222222;
-			border-left: 5px solid #333333;
-			border-right: 5px solid #111111;
+			border-top: 8px solid #222222;
+			border-left: 6px solid #333333;
+			border-right: 6px solid #111111;
 			border-bottom: 0px;
 			height: 40vh;
 			background: red;
-		background: -webkit-linear-gradient(0.49turn, white, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
-		background: -o-linear-gradient(0.49turn, white, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
-		background: -moz-linear-gradient(0.49turn, white, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
-		background: linear-gradient(0.49turn, white, #33273d, #003c5f, #C04E01); /* Standard syntax */
+		background: -webkit-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* Standard syntax */
 		object-fit: cover;
 		object-position: 55%;
 	}
@@ -1270,10 +1270,10 @@ label.menu__btn {
 		overflow: hidden;
 	height: 15vh;
 		background: red;
-		background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
-		background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
-		background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
-		background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
+		background: -webkit-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* Standard syntax */
 		animation: contactsky 20s infinite;
   }
 
@@ -1291,16 +1291,16 @@ label.menu__btn {
 			margin-left: auto;
 			margin-right: auto;
 			border-radius: 50px 50px 0 0;
-			border-top: 5px solid #222222;
-			border-left: 5px solid #333333;
-			border-right: 5px solid #111111;
+			border-top: 8px solid #222222;
+			border-left: 6px solid #333333;
+			border-right: 6px solid #111111;
 			border-bottom: 0px;
 			height: 15vh;
 			background: red;
-		background: -webkit-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
-		background: -o-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
-		background: -moz-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
-		background: linear-gradient(white, #33273d, #003c5f, #C04E01); /* Standard syntax */
+		background: -webkit-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* Standard syntax */
 		object-fit: cover;
 		object-position: 55%;
 	}
@@ -2189,16 +2189,16 @@ h4.email a{
 			margin-left: auto;
 			margin-right: auto;
 			border-radius: 50px 50px 0 0;
-			border-top: 5px solid #222222;
-			border-left: 5px solid #333333;
-			border-right: 5px solid #111111;
+			border-top: 8px solid #222222;
+			border-left: 6px solid #333333;
+			border-right: 6px solid #111111;
 			border-bottom: 0px;
 			height: 15vh;
 			background: red;
-		background: -webkit-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
-		background: -o-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
-		background: -moz-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
-		background: linear-gradient(white, #33273d, #003c5f, #C04E01); /* Standard syntax */
+		background: -webkit-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(0.49turn, #ffffff, #33273d, #003c5f, #C04E01); /* Standard syntax */
 		object-fit: cover;
 		object-position: 55%;
 	}
@@ -2208,10 +2208,10 @@ h4.email a{
 			display: block;
 		height: 10vh;
 		background: red;
-		background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
-		background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
-		background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
-		background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
+		background: -webkit-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
+		background: -o-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
+		background: -moz-linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
+		background: linear-gradient(0.49turn, #ffffff, #33273d, #003c5f); /* Standard syntax */
 		}
 
   .container_two.contact{
