--- a/stylesheet/monitor_portfolio.css
+++ b/stylesheet/monitor_portfolio.css
@@ -215,8 +215,56 @@
   color: #ffffff;
 }
 
+.ltecss {
+  font-size: 10pt;
+  opacity: 1;
+  padding: 5px;
+  font-family: 'lato', sans-serif;
+  color: #ffffff;
+}
+
 .navbarfontawesomefloatright{
   float: right;
+}
+
+.largephonemimicnav{
+  background-color: none;
+  opacity: .8;
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  top: -47px;
+  font-size: 10pt;
+}
+
+.navbarphonefontawesomefloatright{
+  float: right;
+}
+
+.phoneblacknotch {
+  background-color: #000000;
+  color: #000000;
+  display: inline-block;
+  width: 140px;
+  height: 30px;
+  top: -10px;
+  position: absolute;
+  border-radius: 0px 0px 15px 15px;
+  left: 100px;
+  filter: drop-shadow(0px 0px 0px rgba(255,255,255,0));
+}
+
+.phoneblacknotchwithinnotch {
+  background-color: #232323;
+  color: #232323;
+  display: inline-block;
+  width: 50px;
+  height: 6px;
+  top: 12px;
+  position: absolute;
+  border-radius: 25px 25px 25px 25px;
+  left: 45px;
+  filter: drop-shadow(0px 0px 0px rgba(255,255,255,0));
 }
 
 
